opam-version: "2.0"
maintainer:    "thomas@gazagnaire.org"
homepage:      "https://github.com/mirage/mirage-net"
bug-reports:   "https://github.com/mirage/mirage-net/issues"
dev-repo:      "git+https://github.com/mirage/mirage-net.git"
doc:           "https://mirage.github.io/mirage-net/"
authors:       ["Thomas Gazagnaire" "Anil Madhavapeddy" "Gabriel Radanne"
               "Mindy Preston" "Thomas Leonard" "Nicolas Ojeda Bar"
               "Dave Scott" "David Kaloper" "Hannes Mehnert" "Richard Mortier"]
tags:          [ "org:mirage"]
license:       "ISC"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.04.2"}
  "dune" {>= "1.0"}
  "mirage-net" {>= "2.0.0"}
  "lwt"
  "macaddr"
  "cstruct"
]
synopsis: "Network signatures for MirageOS"
description: """
mirage-net-lwt defines `Mirage_net_lwt.S`, the signature for network operations for MirageOS constrained to Lwt.
"""
